--- a/index.html
+++ b/index.html
@@ -14,6 +14,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
 <body>
-  
+  <div class="container">
+    <div class="header">Tic-Tac-Toe</div>
+    <div class="game-container">
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+      <div class="board-module-container">
+        <div class="board-module"></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
