--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   </head>
 <body>
   <div class="container">
-    <div class="header">Tic-Tac-Toe</div>
+    <div class="header unselectable">Tic-Tac-Toe</div>
     <div class="game-container">
       
     </div>
+    <div class="reset-button unselectable">Reset</div>
   </div>
 </body>
 </html>
